add new content for tooltips + IT SHOWS FINALLY

--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -9,24 +9,39 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+              <li data-toggle="tooltip" data-placement="top" title="Our core strength
+              is the growth. We’ve team up with the best growth hackers we know to
+              provide you the best services. Get results within a week and start
+              engage with all those new potential customers.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="Depends on
+              your plan, receive reports that show you where and when things
+              happened on your account. Giving you the best support we can is
+              one of our concern, at anytime. Let’s grow together!">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Analytics Report</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="A good hashtag
+              research is a game changer when you want to reach more people everyday.
+              Let us do that for you. Engage with the right people at the right
+              moment will turn your basic account into a pro one!">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Hashtags Research</li>
+
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 We post for you</li>
+
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Digital Strategy</li>
+
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Design Solution</li>
+
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
@@ -48,24 +63,45 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+              <li data-toggle="tooltip" data-placement="top" title="Our core strength
+              is the growth. We’ve team up with the best growth hackers we know to
+              provide you the best services. Get results within a week and start
+              engage with all those new potential customers.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="Depends on
+              your plan, receive reports that show you where and when things
+              happened on your account. Giving you the best support we can is
+              one of our concern, at anytime. Let’s grow together!">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Analytics Report</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="A good hashtag
+              research is a game changer when you want to reach more people everyday.
+              Let us do that for you. Engage with the right people at the right
+              moment will turn your basic account into a pro one!">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Hashtags Research</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="In order to
+              save you time, we post for you. Our team analyse the best time to
+              reach your community and engage with them. By doing this it help
+              you to keep focus on what matter most, your content and your customers.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 We post for you</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="Set up awesome
+              strategies with us to win the market on Instagram. Be noticed by
+              targeted customers by engaging with them and creating the best
+              experience for them on your Instagram profile.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Digital Strategy</li>
+
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Design Solution</li>
+
               <li class="unchecked-feature">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
@@ -87,25 +123,49 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+              <li data-toggle="tooltip" data-placement="top" title="Our core strength
+              is the growth. We’ve team up with the best growth hackers we know to
+              provide you the best services. Get results within a week and start
+              engage with all those new potential customers.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="Depends on
+              your plan, receive reports that show you where and when things
+              happened on your account. Giving you the best support we can is
+              one of our concern, at anytime. Let’s grow together!">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Analytics Report</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="A good hashtag
+              research is a game changer when you want to reach more people everyday.
+              Let us do that for you. Engage with the right people at the right
+              moment will turn your basic account into a pro one!">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Hashtags Research</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="In order to
+              save you time, we post for you. Our team analyse the best time to
+              reach your community and engage with them. By doing this it help
+              you to keep focus on what matter most, your content and your customers.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 We post for you</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+
+              <li data-toggle="tooltip" data-placement="top" title="Set up awesome
+              strategies with us to win the market on Instagram. Be noticed by
+              targeted customers by engaging with them and creating the best
+              experience for them on your Instagram profile.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Digital Strategy</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+              <li data-toggle="tooltip" data-placement="top" title="With a great
+              eye of design, our UX-UI team is here to give the best advices to
+              match the trends on Instagram in term of content. From stories to
+              posts be the best in your domain.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Design Solution</li>
-              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+              <li data-toggle="tooltip" data-placement="top" title="7 days a week
+              and 24 hours a day you can reach our experts for special queries or
+              important change to make for your strategies.">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
             </ul>
