--- a/app/assets/stylesheets/sections/_pricing.scss
+++ b/app/assets/stylesheets/sections/_pricing.scss
@@ -9,4 +9,7 @@
 .tooltip {
   position: fixed;
   z-index: 100;
+  margin-left: -15px;
+  font-family: "Avenir";
+  background-color: rgba(255, 255, 255, .5) !important;
 }
