--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -227,7 +227,7 @@
       font-weight: 400;
       font-size: 14px;
       margin-top: 18px;
-      // cursor: pointer;
+      cursor: pointer;
 
       svg {
         margin-right: 7%;
