add dropdown menu service

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,9 @@
 @import "pages/thankyou";
 @import "pages/terms";
 
+// Services
+@import "services/account_creation";
+
 // Plans
 @import "plans/plan";
 @import "plans/starter";
