--- a/app/views/shared/_navbar_home.html.erb
+++ b/app/views/shared/_navbar_home.html.erb
@@ -28,10 +28,15 @@
       </a>
     </div> <!-- End .nav-element -->
 
-    <div class="nav-element">
-      <a href="#contact">
-        Contact
+    <div class="nav-element dropdown-toggle" data-toggle="dropdown">
+      <a href="/services">
+        Services <b class="caret"></b>
       </a>
+
+      <ul class="element-dropdown">
+        <li><a href="#">Account Creation</a></li>
+        <li><a href="#">Newsletter</a></li>
+      </ul>
     </div> <!-- End .nav-element -->
 
     <div class="nav-element">
@@ -58,7 +63,7 @@
       <li><a href="#features">Features</a></li>
       <li><a href="#how">How</a></li>
       <li><a href="#pricing">Pricing</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/services">Services</a></li>
       <li role="separator" class="divider"></li>
       <li><a href="/plan">Get Started</a></li>
     </ul>
