--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -105,6 +105,15 @@ div.dropdown:hover > .dropdown-menu {
   margin-top: -2px;
   box-shadow: 0px 15px 30px -5px rgba(0, 0, 0, 0.2);
   border: 0px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  li {
+    a {
+      padding-top: 8px;
+      padding-bottom: 8px;
+    }
+  }
 }
 
 ////////////////////////////////////////////////////////////////// Dropdown Menu
@@ -128,9 +137,24 @@ div.dropdown:hover > .dropdown-menu {
   margin-left: 83%;
 }
 
-.show > .dropdown-menu-mobile {
+.show > .dropdown-menu {
   margin-left: -115px !important;
+  display: block;
+  padding-top: 2px;
+  margin-top: 5px;
+  box-shadow: 0px 15px 30px -5px rgba(0, 0, 0, 0.2);
+  border: 0px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  li {
+    a {
+      padding-top: 8px;
+      padding-bottom: 8px;
+    }
+  }
 }
+
 
 .btn-default {
   border: none;
