--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -58,7 +58,7 @@
     </button>
 
     <!-- List -->
-    <ul class="dropdown-menu-mobile" aria-labelledby="dropdownMenu1">
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
       <li><a href="#discover">Discover</a></li>
       <li><a href="#features">Features</a></li>
       <li><a href="#how">How</a></li>
