add services pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,7 @@
 @import "pages/jobs";
 @import "pages/thankyou";
 @import "pages/terms";
+@import "pages/services";
 
 // Services
 @import "services/account_creation";
