--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,8 +34,8 @@
       </a>
 
       <ul class="dropdown-menu">
-        <li><a href="#">Account Creation</a></li>
-        <li><a href="#">Newsletter</a></li>
+        <li><a href="/services/account-creation">Account Creation</a></li>
+        <li><a href="/services/newsletter">Newsletter</a></li>
       </ul>
     </div> <!-- End .nav-element -->
 
