--- a/app/views/shared/_navbar_home.html.erb
+++ b/app/views/shared/_navbar_home.html.erb
@@ -28,14 +28,14 @@
       </a>
     </div> <!-- End .nav-element -->
 
-    <div class="nav-element dropdown-toggle" data-toggle="dropdown">
-      <a href="/services">
+    <div class="nav-element dropdown">
+      <a href="/services" class="dropdown-toggle" >
         Services <b class="caret"></b>
       </a>
 
-      <ul class="element-dropdown">
-        <li><a href="#">Account Creation</a></li>
-        <li><a href="#">Newsletter</a></li>
+      <ul class="dropdown-menu">
+        <li><a href="/services/account-creation">Account Creation</a></li>
+        <li><a href="/services/newsletter">Newsletter</a></li>
       </ul>
     </div> <!-- End .nav-element -->
 
