--- a/app/views/shared/_navbar_home.html.erb
+++ b/app/views/shared/_navbar_home.html.erb
@@ -30,12 +30,13 @@
 
     <div class="nav-element dropdown">
       <a href="/services" class="dropdown-toggle" >
-        Services <b class="caret"></b>
+        More <b class="caret"></b>
       </a>
 
       <ul class="dropdown-menu">
-        <li><a href="/services/account-creation">Account Creation</a></li>
-        <li><a href="/services/newsletter">Newsletter</a></li>
+        <li><a href="/services/account-creation">Instagram Account Creation</a></li>
+        <li><a href="/services/newsletter">Newsletter Trick and Tips</a></li>
+        <li><a href="/services/newsletter">Instagram Coaching</a></li>
       </ul>
     </div> <!-- End .nav-element -->
 
@@ -50,7 +51,7 @@
   <!-- Logo Helloradius -->
   <%= image_tag("logo-helloradius.svg", class: "logo-mobile") %>
 
-  <div class="dropdown">
+  <div class="dropdown-1">
     <!-- Dropdown Icon -->
     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
       data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -63,7 +64,7 @@
       <li><a href="#features">Features</a></li>
       <li><a href="#how">How</a></li>
       <li><a href="#pricing">Pricing</a></li>
-      <li><a href="/services">Services</a></li>
+      <li><a href="/services">More</a></li>
       <li role="separator" class="divider"></li>
       <li><a href="/plan">Get Started</a></li>
     </ul>
